--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -38,6 +38,7 @@ de:
 
   search:
     index:
+      hi_user: "Hi %{username}! Du suchst ein Passwort?"
       no_results_found: "keine Resultate gefunden"
 
   accounts:
@@ -57,6 +58,7 @@ de:
       last_change: "Letzte Änderung vor %{time_ago}"
       attachments: "Anhänge"
       file: "Datei"
+      show_password: "Passwort anzeigen"
     new:
       title: "Neuer Account"
 
