--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,7 +38,8 @@ en:
 
   search:
     index:
-      no_results_found: no results found
+      hi_user: "Hi %{username}! Want to recover a password?"
+      no_results_found: "no results found"
 
   accounts:
     index:
@@ -57,6 +58,7 @@ en:
       last_change: "Last change was %{time_ago} ago"
       attachments: "Attachments"
       file: "File"
+      show_password: "Show password"
     new:
       title: "New Account"
 
@@ -85,7 +87,7 @@ en:
         ldap_new_password: "Your new LDAP Password"
         ldap_password: "Your LDAP Password"
         forgot_password_recrypt: |
-          When you forgot your old password just the teams which aren't private will be decrypted.
+          When you forgot your old password, just the teams which aren't private will be decrypted.
           After the request was send you have to wait until an admin decrypts your passwords.
         recrypt: "Recrypt"
         send: "Send request"
