--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -38,6 +38,7 @@ fr:
 
   search:
     index:
+      hi_user: "Salut %{username}! Vous cherchez un mot de passe?"
       no_results_found: "Aucun résultat trouvé"
 
   accounts:
@@ -57,6 +58,7 @@ fr:
       last_change: "Dernière mise à jour il ya %{time_ago}"
       attachments: "Attachements"
       file: "Fichier"
+      show_password: "Afficher le mot de passe"
     new:
       title: "Nouveau compte"
 
