added fr translation refs #18285

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -87,7 +87,9 @@ fr:
         ldap_old_password: "Votre ancien mot de passe de LDAP"
         ldap_new_password: "Votre nouveau mot de passe de LDAP"
         ldap_password: "Votre mot de passe de LDAP"
-        forgot_password_recrypt: "Si vous avez oublié votre mot de passe, vous pouvez envoyer une demande re crypt. Vous devez attendre jusqu'à ce qu'elle ait re crypté vos mots de passe."
+        forgot_password_recrypt: |
+          Si vous avez oublié votre mot de passe, seulement celles équipes sont décryptées qui ne sont pas privées.
+          Après l'envoi du formulaire, vous devez attendre jusqu'à ce qu'un administrateur a traité la demande.
         recrypt: "Re crypter"
         send: "Envoyer la demande"
     users:
