--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,6 +88,7 @@ en:
         ldap_password: "Your LDAP Password"
         forgot_password_recrypt: |
           When you forgot your old password, just the teams which aren't private will be decrypted.
+          All private teams whitch would become unaccessible for any users will be deleted.
           After the request was send you have to wait until an admin decrypts your passwords.
         recrypt: "Recrypt"
         send: "Send request"
