--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,7 @@ en:
         title: "Re-encryption requests"
         user: "User"
         admin_required: "Admin required"
+        recrypt: "Recrypt"
       request:
         request_sent: "A request to recrypt your group passwords was sent. Wait until she recrypted your passwords."
       uncrypterror:
