edited warning message refs #18476

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,7 +99,7 @@ en:
       edit:
         title: "Editing user"
         reset_password: "Reset password"
-        warning: "*Resetting the password of an user lets him lose all his private Teams he's the only Member of."
+        warning: "*Resetting the password of a user lets him lose all his private Teams he's the last teammember."
       index:
         title: "List of all Cryptopus users"
         username: "Username"
