--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -31,7 +31,7 @@ fr:
   unencrypted_field_caption: ne pas crypté
   group: "Groupe"
   team: "Équipe"
-  move: "Mouvior"
+  move: "Mouvoir"
 
   i18n:
     language:
