--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,9 +110,10 @@ en:
         action: "Action"
         locked: "Locked users"
         unlock: "Unlock"
-      soloteams:
-        message: "The following Teams will be deleted because the user is the last member of this team."
-        title: "Teams"
+      last_teammember_teams:
+        message: "Before you can delete this user you have to delete the following teams, because the user is the last member."
+        delete_user: "Are you sure you want to delete this User?"
+        destroy: "Destroy User"
       new:
         title: "New user"
 
