--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -100,7 +100,7 @@ de:
       edit:
         title: "Benutzer bearbeiten"
         reset_password: "Passwort zurücksetzen"
-        warning: "*Das Zurücksetzen des Passworts eines Benutzers führt zum Verlust seiner Private Teams,
+        warning: "Das Zurücksetzen des Passworts eines Benutzers führt zum Verlust seiner Private Teams,
          in denen er der einzige Member ist."
       index:
         title: "Liste aller Cryptopus Benutzer"
