--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -221,7 +221,7 @@ de:
 
     accounts:
       created: "Der neue Account wurde erfolgreich erstellt."
-      updated: "Der Account wurde erfolgreich bearbeitet."
+      updated: "Der Account wurde erfolgreich verschoben."
     application:
       wait: "Bitte warten Sie, bis  Ihre Team Passwörter neu verschlüsselt wurden."
     groups:
