--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -222,7 +222,8 @@ de:
 
     accounts:
       created: "Der neue Account wurde erfolgreich erstellt."
-      updated: "Der Account wurde erfolgreich verschoben."
+      updated: "Der Account wurde erfolgreich aktualisiert."
+      moved: "Der Account wurde erfolgreich veschoben"
     application:
       wait: "Bitte warten Sie, bis  Ihre Team Passwörter neu verschlüsselt wurden."
     groups:
