--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -46,6 +46,7 @@ de:
       type_to_search: "Tippen um zu suchen..."
 
   accounts:
+    title: 'Accounts'
     index:
       move: "Account zu einer anderen Gruppe verschieben"
       title: "Accounts der Gruppe %{group_name} des Teams %{team_name}"
@@ -121,6 +122,7 @@ de:
         title: "Neuer Benutzer"
 
   groups:
+    title: "Gruppen"
     index_menu:
       create: "Gruppe erstellen"
     edit:
