--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -242,7 +242,7 @@ en:
       only_local: "Only local users are allowed to change their password."
       new_password_set: "You successfully set the new password"
       new_passwords_not_equal: "New passwords not equal"
-      wrong_password: "Wrong password"
+      wrong_password: "Invalid user / password"
       not_local: "You are not a local user!"
       locked: "User is currently locked. Please try to login again a bit later or contact the administrator if your user has been locked permanently"
     recryptrequests:
