#24334 show password quality with smiley

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -360,3 +360,8 @@ de:
       x_seconds:
         one: eine Sekunde
         other: "%{count} Sekunden"
+
+  password_strength:
+    weak: "Das Passwort ist unsicher"
+    good: "Das Passwort genügt"
+    strong: "Das Passwort ist stark!"
