--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -28,7 +28,7 @@ de:
   recrypt_requests: "Recrypt Anfragen"
   users: "Benutzer"
   change_password: "Passwort wechseln"
-  last_login: "Ihr letztes Login war vor %{time_ago}."
+  last_login: "Ihr letztes Login war am %{last_login_date} um %{last_login_time} Uhr."
   unencrypted_field_caption: nicht verschlüsselt
   group: "Gruppe"
   team: "Team"
@@ -110,6 +110,7 @@ de:
         username: "Benutzername"
         name: "Name"
         ldap_uid: "LDAP UID"
+        last_login_at: "Letzte Anmeldung am"
         admin: "Admin"
         action: "Aktion"
         locked: "Gesperrte Benutzer"
