--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,7 +28,7 @@ fr:
   recrypt_requests: "Demandes de re crypt"
   users: "Utilisateur"
   change_password: "Changer le mot de passe"
-  last_login: "Votre dernière connexion était le %{last_login_date} à %{last_login_time}h."
+  last_login: "Votre dernière connexion était le %{last_login_date}"
   unencrypted_field_caption: "ne pas crypté"
   group: "Groupe"
   team: "Équipe"
