--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,7 +28,7 @@ fr:
   recrypt_requests: "Demandes de re crypt"
   users: "Utilisateur"
   change_password: "Changer le mot de passe"
-  last_login: "Votre dernière connexion était le %{last_login_date}"
+  last_login: "La dernière connexion était le %{last_login_date} de %{last_login_from}"
   unencrypted_field_caption: "ne pas crypté"
   group: "Groupe"
   team: "Équipe"
@@ -111,6 +111,7 @@ fr:
         name: "Nom"
         ldap_uid: "LDAP UID"
         last_login_at: "Dernière connexion à"
+        last_login_from: "Dernière connexion de"
         admin: "Admin"
         action: "Action"
         locked: "Bloqué utilisateurs"
