--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,7 @@ en:
   users: "Users"
   change_password: "Change password"
   last_login_date_and_from: "The last login was on %{last_login_date} from %{last_login_from}"
+  last_login_date_and_from_country: "The last login was on %{last_login_date} from %{last_login_from} (%{last_login_country})"
   last_login_date: "The last login was on %{last_login_date}"
   unencrypted_field_caption: not encrypted
   group: "Group"
