--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,6 +28,10 @@ fr:
   recrypt_requests: "Demandes de re crypt"
   users: "Utilisateur"
   change_password: "Changer le mot de passe"
+  last_login_date_and_from: "La dernière connexion était le %{last_login_date} de %{last_login_from}"
+  last_login_date_and_from_country: "La dernière connexion était le %{last_login_date} de %{last_login_from} (%{last_login_country})"
+  last_login_date: "La dernière connexion était le %{last_login_date}"
+ 
   last_login: "La dernière connexion était le %{last_login_date} de %{last_login_from}"
   unencrypted_field_caption: "ne pas crypté"
   group: "Groupe"
