--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -28,9 +28,9 @@ de:
   recrypt_requests: "Recrypt Anfragen"
   users: "Benutzer"
   change_password: "Passwort wechseln"
-  last_login_date_and_from: "Das letzte Login war am %{last_login_date} von %{last_login_from}"
-  last_login_date_and_from_country: "Das letzte Login war am %{last_login_date} von %{last_login_from} (%{last_login_country})"
-  last_login_date: "Das letzte Login war am %{last_login_date}"
+  last_login_date_and_from: "Das letzte Login war am %{last_login_at} von %{last_login_from}"
+  last_login_date_and_from_country: "Das letzte Login war am %{last_login_at} von %{last_login_from} (%{last_login_country})"
+  last_login_date: "Das letzte Login war am %{last_login_at}"
   group: "Gruppe"
   team: "Team"
   move: "Bewegen"
