--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -58,7 +58,7 @@ de:
       add_attachment: "Anhang hinzufügen"
     edit:
       title: "Account editieren"
-
+      generate_password: "Passwort generieren"
     show:
       title: "Account: %{account_name}"
       last_change: "Letzte Änderung vor %{time_ago}"
