--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,7 +59,7 @@ en:
       add_attachment: "Add attachment"
     edit:
       title: "Editing account"
-
+      generate_password: "Generate password"
     show:
       title: "Account: %{account_name}"
       last_change: "Last change was %{time_ago} ago"
