--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -82,6 +82,7 @@ de:
       index:
         title: Einstellungen bearbeiten
         save: Änderungen speichern
+        ldap: Ldap Verbindung testen
     recryptrequests:
       index:
         title: Entschlüsselungs Anfragen
@@ -206,6 +207,11 @@ de:
           destroy:
             own_user: "Eigener Benutzer kann nicht gelöscht werden"
           no_access: "Zugriff verweigert"
+        settings:
+          test_ldap_connection:
+            successful: "Verbindung zum Ldap Server %{hostname} erfolgreich"
+            failed: "Verbindung zum Ldap Server %{hostname} fehlgeschlagen"
+            no_hostname_present: "Kein Hostname vorhanden"
       members:
         added: "%{username} wurde erfolgreich hinzugefügt"
         removed: "%{username} wurde erfolgreich entfernt"
