--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -84,6 +84,7 @@ en:
       index:
         title: Edit Settings
         save: Save changes
+        ldap: Test LDAP connection
     recryptrequests:
       index:
         title: Re-encryption requests
@@ -207,9 +208,14 @@ en:
             conf_admin: "%{username} is now an conf-admin"
             admin: "%{username} is now an admin"
           destroy:
-            own_user: "You can't delete your-self"
+            own_user: "You can't delete yourself"
             success: "Deleted user %{username}"
           no_access: "Access denied"
+        settings:
+          test_ldap_connection:
+            successful: "Connection to Ldap Server %{hostname} successful"
+            failed: "Connection to Ldap Server %{hostname} failed"
+            no_hostname_present: "No hostname present" 
       members:
         removed: "%{username} was successfully removed from team"
         added: "%{username} was successfully added to team"
@@ -231,7 +237,7 @@ en:
       users:
         created: Successfully created a new user.
         destroy:
-          own_user: You can't delete your-self
+          own_user: You can't delete yourself
           root: Root cannot be deleted
         update:
           root: Root cannot be updated
