--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -25,250 +25,250 @@ zh:
   logout: "注销"
   auto_logout: "自动注销"
   settings: "设置"
-  recrypt_requests: "Recrypt requests"
-  users: "Users"
-  change_password: "Change password"
-  last_login_date_and_from: "The last login was on %{last_login_at} from %{last_login_from}"
-  last_login_date_and_from_country: "The last login was on %{last_login_at} from %{last_login_from} (%{last_login_country})"
-  last_login_date: "The last login was on %{last_login_at}"
-  unencrypted_field_caption: not encrypted
-  group: "Group"
-  team: "Team"
-  move: "Move"
+  recrypt_requests: "加密请求"
+  users: "用户"
+  change_password: "更改密码"
+  last_login_date_and_from: "上次登陆时间：%{last_login_at} 位置 %{last_login_from}"
+  last_login_date_and_from_country: "上次登陆时间： %{last_login_at} 位置 %{last_login_from} (国家：%{last_login_country})"
+  last_login_date: "上次登陆时间：%{last_login_at}"
+  unencrypted_field_caption: 未加密
+  group: "组"
+  team: "团队"
+  move: "移动"
 
   i18n:
     language:
-      name: 'English'
+      name: '英文'
 
   search:
-    title: "Search"
+    title: "搜索"
     index:
-      hi_user: "Hi %{username}! Want to recover a password?"
-      no_results_found: "no results found"
-      type_to_search: "Type to search..."
+      hi_user: "你好 %{username}! 想要恢复密码？"
+      no_results_found: "未找到任何结果"
+      type_to_search: "输入搜索关键字..."
 
   accounts:
-    title: "Accounts"
+    title: "帐户"
     index:
-      move: "Move account to other group"
-      title: "Accounts in group %{group_name} for team %{team_name}"
+      move: "移动帐户到其他组"
+      title: "%{team_name} 团队中 %{group_name} 组的成员帐户"
     index_menu:
-      create: "Create Account"
-      group: "Groups"
+      create: "创建帐户"
+      group: "组"
     show_menu:
-      add_attachment: "Add attachment"
+      add_attachment: "添加附件"
     edit:
-      title: "Editing account"
-      random_password: "Random password"
+      title: "编辑帐户"
+      random_password: "随机密码"
     show:
-      title: "Account: %{account_name}"
-      last_change: "Last change was %{time_ago} ago"
-      attachments: "Attachments"
-      file: "File"
-      show_password: "Show password"
+      title: "帐户: %{account_name}"
+      last_change: "最后一次更新于 %{time_ago} 之前"
+      attachments: "附件"
+      file: "文件"
+      show_password: "显示密码"
     new:
-      title: "New Account"
+      title: "新帐户"
 
   admin:
     maintenance_tasks:
       index:
-        title: "Maintenance tasks"
-        maintenance_task: "Maintenance tasks"
-        run: "execute"
+        title: "维护任务"
+        maintenance_task: "维护任务"
+        run: "执行"
     settings:
       index:
-        title: "Edit Settings"
-        save: "Save changes"
+        title: "编辑设置"
+        save: "保存更改"
     recryptrequests:
       index:
-        title: "Re-encryption requests"
-        user: "User"
-        admin_required: "Admin required"
-        recrypt: "Recrypt"
+        title: "重新加密请求"
+        user: "用户"
+        admin_required: "需要管理员权限"
+        recrypt: "加密"
       request:
-        request_sent: "A request to recrypt your group passwords was sent. Wait until she recrypted your passwords."
+        request_sent: "加密组密码的请求已发送。请等待系统重新加密你的密码。"
       uncrypterror:
-        new_password: "New password?!"
-        ldap_password_changed: "Your LDAP Password has changed since your last login."
-        ldap_enter_old_password: "Please enter your old LDAP Passwort to decrypt your Private_key."
-        ldap_old_password: "Your old LDAP Password"
-        ldap_new_password: "Your new LDAP Password"
-        ldap_password: "Your LDAP Password"
+        new_password: "新密码?!"
+        ldap_password_changed: "自从上次登陆后，你的LDAP密码已被更改。"
+        ldap_enter_old_password: "请输入你的旧LDAP密码来解密你的私钥。"
+        ldap_old_password: "你的旧LDAP密码"
+        ldap_new_password: "你的新LDAP密码"
+        ldap_password: "你的LDAP密码"
         forgot_password_recrypt: |
-          When you forgot your old password, just the teams which aren't private will be decrypted.
-          All private teams whitch would become unaccessible for any users will be deleted.
-          After the request was send you have to wait until an admin decrypts your passwords.
-        recrypt: "Recrypt"
-        send: "Send request"
+　　　　　当你忘记旧密码时，只有非私有的团队才能被解密。
+　　　　　任何用户都不能访问的私有团队将被删除。
+　　　　　在请求发送后，你需要等待管理员解密你的密码。
+        recrypt: "重新加密"
+        send: "发送请求"
     users:
       index_menu:
-        create: "Create new user"
+        create: "创建新用户"
       edit:
-        title: "Editing user"
-        reset_password: "Reset password"
-        warning: "By resetting the password, the user loses access to all his private teams. All teams, where he is the only member will be deleted"
+        title: "编辑用户"
+        reset_password: "重置密码"
+        warning: "一旦重置密码，用户会失去他/她对所有私有团队的访问权。如果团队中只有他/她自己，团队会被删除。"
       index:
-        title: "List of all Cryptopus users"
-        username: "Username"
-        name: "Name"
+        title: "列举所有Cryptopus用户"
+        username: "用户名"
+        name: "名字"
         ldap_uid: "LDAP UID"
-        last_login_at: "Last login at"
-        last_login_from: "Last login from"
-        admin: "Admin"
-        action: "Action"
-        locked: "Locked users"
-        unlock: "Unlock"
+        last_login_at: "上次登陆于"
+        last_login_from: "上次登陆位置"
+        admin: "管理员"
+        action: "操作"
+        locked: "已被锁定用户"
+        unlock: "解锁"
       last_teammember_teams:
-        message: "Before you can delete this user you have to delete the following teams, because the user is the last member."
-        delete_user: "Are you sure you want to delete this User?"
-        destroy: "Destroy User"
+        message: "在删除这个用户前必须先要删除这个团队，因为这个用户是团队中的唯一成员。"
+        delete_user: "你确定要删除这个用户？"
+        destroy: "删除用户"
       new:
-        title: "New user"
+        title: "新用户"
 
   groups:
-    title: "Groups"
+    title: "组"
     index_menu:
-      create: "Create group"
+      create: "创建组"
     edit:
-      title: "Editing group"
+      title: "编辑组"
     index:
-      title: "Groups for team %{team_name}"
-      group: "Group"
-      members: "Members"
-      add_member: "Add member"
-      admins: "Admins"
+      title: "%{team_name} 团队中的组"
+      group: "组"
+      members: "成员"
+      add_member: "添加成员"
+      admins: "管理员"
     new:
-      title: "New group"
+      title: "新的组"
 
   items:
     new:
-      title: "Add new attachment to account"
-      upload: "File to upload"
-      upload_file: "Upload file"
+      title: "添加附件到帐户"
+      upload: "待上传文件"
+      upload_file: "上传文件"
 
   logins:
     login:
-      title: "Log in"
-      description: "Please enter your username and password to access cryptopus"
-      submit: "Login"
+      title: "登陆"
+      description: "请输入用户名和密码访问cryptopus"
+      submit: "登陆"
     logout:
-      title: "Logout"
-      message: "Bye"
-      hint: "Please clear your browser cache."
+      title: "注销"
+      message: "再见"
+      hint: "请清除浏览器缓存。"
     newuser:
-      title: "Welcome to Cryptopus"
-      description: "We created a new keypair for you. Enjoy Cryptopus."
+      title: "欢迎使用Cryptopus"
+      description: "我们已为你创建了一对新密钥。享受Cryptopus的体验。"
     noaccess:
-      title: "Access denied"
+      title: "访问拒绝"
     show_update_password:
-      title: "Change password"
-      old: "Old password"
-      new: "New password"
-      new_retype: "New password (retype)"
-      submit: "Change"
+      title: "改变密码"
+      old: "旧密码"
+      new: "新密码"
+      new_retype: "重新输入新密码"
+      submit: "更改"
 
   teammembers:
     new:
-      title: "Add a new teammember"
+      title: "添加团队成员"
     confirm:
-      delete: "Remove %{entry_label} from team ?"
-    show: "Show members"
-    hide: "Hide members"
+      delete: "将 %{entry_label} 从团队中删除？"
+    show: "显示成员"
+    hide: "隐藏成员"
 
   teams:
-    title: "Teams"
+    title: "团队"
     form:
-      private: "Private"
+      private: "私有"
     index_menu:
-      create: "Create new team"
+      create: "创建新团队"
     index:
-      title: "You are member of the following teams:"
-      team: "Team"
+      title: "你是如下团队成员："
+      team: "团队"
     new:
-      title: "Create a new team"
+      title: "创建一个新团队"
     description:
-      private: admins have no access if checked
+      private: 如果选中管理员将无访问权限
 
   flashes:
     api:
       admin:
         users:
           toggle:
-            empowered: "%{username} is now an admin"
-            disempowered: "%{username} is no more admin"
+            empowered: "%{username} 目前成为管理员"
+            disempowered: "%{username} 不是管理员"
       members:
-        removed: "%{username} was successfully removed from team"
-        added: "%{username} was successfully added to team"
+        removed: "%{username} 被成功的从团队中删除"
+        added: "%{username} 被成功的加入团队"
     wizard:
-      fill_password_fields: "Please provide an initial password"
-      paswords_do_not_match: "Passwords do not match"
+      fill_password_fields: "请提供出示密码"
+      paswords_do_not_match: "密码不匹配"
     admin:
       admin:
-        no_access: "Access denied"
+        no_access: "访问拒绝"
       settings:
-        example: "These are example settings. Please overwrite them with your settings."
-        successfully_updated: "Your settings were successfully updated."
+        example: "这是设置样本，请用你自己的设置覆盖这些设置。"
+        successfully_updated: "你的设置已经被更新。"
       recryptrequests:
-        some: "Successfully recrypted some passwords for %{user_name}"
-        all: "Successfully recrypted all passwords for %{user_name}"
+        some: "成功的重新加密 %{user_name} 的部分密码"
+        all: "成功的重新加密 %{user_name} 的全部密码"
         resetpassword:
-          success: "Successfully reset password"
-          required: "The password must not be blank"
+          success: "成功重置密码"
+          required: "密码不能为空"
       users:
-        created: "Successfully created a new user."
+        created: "成功创建新用户。"
         destroy:
-          own_user: "You can't delete your-self"
-          root: "Root cannot be deleted"
+          own_user: "你不能删除自己"
+          root: "Root不能被删除"
         update:
-          root: "Root cannot be updated"
-          ldap: "Ldap user cannot be updated"
+          root: "Root不能被更新"
+          ldap: "不能更新Ldap用户"
       maintenance_tasks:
-        succeed: "Task was executed successfully."
-        failed: "Task failed. See logs for more information."
+        succeed: "成功的执行任务。"
+        failed: "任务失败。请查看日志了解更多信息。"
 
     accounts:
-      created: "Account was successfully created."
-      updated: "Account was successfully updated."
-      moved: "Account was successfully moved"
+      created: "帐户被成功创建。"
+      updated: "帐户被成功更新。"
+      moved: "帐户被成功删除。"
     application:
-      wait: "Wait for the recryption of your team passwords."
+      wait: "请等待你的团队密码被重新加密。"
     groups:
-      created: "Successfully created a new group."
-      updated: "Group was successfully updated."
+      created: "成功创建一个新的组。"
+      updated: "成功更新一个新的组。"
     items:
-      uploaded: "File was successfully uploaded."
-      uploaded_size_to_high: "The file is too big to upload. (max. 10MB)"
-      uploaded_filename_is_empty: "The file has to be named"
-      uploaded_file_inexistent: "File is inexistent"
+      uploaded: "文件被成功上传。"
+      uploaded_size_to_high: "文件太大不能上船。(最大为：10MB)"
+      uploaded_filename_is_empty: "文件必须被命名"
+      uploaded_file_inexistent: "文件不存在"
     logins:
-      weak_password: "To improve security you should change your login password to a more complex one."
-      welcome: "Welcome to Cryptopus, first you have to create a new account. Please enter a new password"
-      auth_failed: "Authentication failed! Enter a correct username and password."
-      only_local: "Only local users are allowed to change their password."
-      new_password_set: "You successfully set the new password"
-      new_passwords_not_equal: "New passwords not equal"
-      wrong_password: "Invalid user / password"
-      not_local: "You are not a local user!"
-      locked: "User is currently locked. Please try to login again a bit later or contact the administrator if your user has been locked permanently"
+      weak_password: "为了提高安全性，请设置一个复杂的密码。"
+      welcome: "欢迎使用Cryptopus，请先创建一个新帐户。请输入一个新密码"
+      auth_failed: "认证出错！请输入正确用户名和密码。"
+      only_local: "只有局部用户可以更改密码。"
+      new_password_set: "成功设置新密码"
+      new_passwords_not_equal: "新密码不匹配"
+      wrong_password: "错误的用户名 / 密码"
+      not_local: "你不是局部用户！"
+      locked: "用户被锁定。如果你的帐户一直被锁定，请稍候再试或者联系系统管理员。"
     recryptrequests:
-      recrypted: "You have successfully recrypted the password"
-      wait: "Wait for the recryption of your team passwords"
-      wrong_password: "Your password was wrong"
+      recrypted: "你已经成功地重新加密密码"
+      wait: "请等待重新加密你的团队密码"
+      wrong_password: "你的密码错误"
     teams:
-      wrong_user_password: "Enter a correct username and password or check the LDAP Settings"
-      created: "Successfully created a new team."
-      updated: "Team was successfully updated."
-      deleted: "Team was successfully deleted"
-      cannot_delete: "Only admin may delete teams"
-      no_member: "You are not member of this team"
+      wrong_user_password: "输入正确的用户名和密码或检查LDAP设置"
+      created: "成功创建了一个团队。"
+      updated: "成功更新团队。"
+      deleted: "成功删除团队。"
+      cannot_delete: "只有管理员才能删除团队"
+      no_member: "你不是团队成员"
     teammembers:
-      could_not_remove_last_teammember: "Could not remove last teammember"
-      could_not_remove_admin_from_private_team: "Could not remove admin from private team"
+      could_not_remove_last_teammember: "不能删除最后一个团队成员"
+      could_not_remove_admin_from_private_team: "不能从私有团队中删除管理员"
 
   confirm:
-    delete: "Delete %{entry_class} %{entry_label} ?"
-    changeAdmin: "give/remove Admin-Rights?"
-    deleteWithTeams: "Delete all teams where %{username} is the last teammember"
+    delete: "删除 %{entry_class} %{entry_label} ?"
+    changeAdmin: "添加/删除管理员权限？"
+    deleteWithTeams: "删除 %{username} 用户为最后一个团队成员的团队"
 
 #Validation Errors
   activerecord:
@@ -278,15 +278,15 @@ zh:
         header: ''
       models:
         user:
-          new_password_invalid: "Your NEW password was wrong"
-          old_password_invalid: "Your OLD password was wrong"
+          new_password_invalid: "你的新密码错误"
+          old_password_invalid: "你的旧密码错误"
         item:
           attributes:
             filename:
-              blank: 'Filename does not exist'
-              taken: 'Filename is already taken'
+              blank: '文件不存在'
+              taken: '文件名已被使用'
 
   password_strength:
-    weak: "The password is weak"
-    good: "The password is good"
-    strong: "The password is strong!"
+    weak: "密码太弱了"
+    good: "密码很好"
+    strong: "非常强大的密码！"
