--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -21,6 +21,8 @@ de:
   download: Herunterladen
   yes: Ja
   no: Nein
+  help: Hilfe
+  version: Version
   forgot_password: Passwort vergessen?
   logout: Abmelden
   auto_logout: automatisches Abmelden in
@@ -70,6 +72,7 @@ de:
       title: Neuer Account
 
   admin:
+    title: "Admin"
     maintenance_tasks:
       index:
         title: Wartungsaufgaben
