--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -271,11 +271,10 @@ en:
       created: Successfully created a new team.
       updated: Team was successfully updated.
       deleted: Team was successfully deleted
-<<<<<<< 17b1d724a5cb90763e235374bae627d4584b0354
       cannnot_delete: Only admin may delete teams
       no_member: You are not member of this team
-=======
->>>>>>> added policy for TeamsController, refs #27289
+      cannnot_delete: Only admin may delete teams
+      no_member: You are not member of this team
     teammembers:
       could_not_remove_last_teammember: Could not remove last teammember
       could_not_remove_admin_from_private_team: Could not remove admin from private team
