--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -129,6 +129,10 @@ en:
         destroy: Destroy User
       new:
         title: New user
+    user_roles:
+      user: User
+      conf_admin: Conf Admin
+      admin: Admin
 
   groups:
     title: Groups
@@ -198,9 +202,10 @@ en:
     api:
       admin:
         users:
-          toggle:
-            empowered: "%{username} is now an admin"
-            disempowered: "%{username} is no more admin"
+          update:
+            user: "%{username} is now a user"
+            conf_admin: "%{username} is now an conf-admin"
+            admin: "%{username} is now an admin"
           destroy:
             own_user: "You can't delete your-self"
             success: "Deleted user %{username}"
@@ -270,7 +275,9 @@ en:
       created: Successfully created a new team.
       updated: Team was successfully updated.
       deleted: Team was successfully deleted
-      cannot_delete: Only admin may delete teams
+      cannnot_delete: Only admin may delete teams
+      no_member: You are not member of this team
+      cannnot_delete: Only admin may delete teams
       no_member: You are not member of this team
     teammembers:
       could_not_remove_last_teammember: Could not remove last teammember
@@ -301,3 +308,10 @@ en:
     weak: The password is weak
     good: The password is good
     strong: The password is strong!
+
+  #Pundit
+  pundit:
+    default: Access denied
+    team_policy:
+      update?:  You are not a member of this team
+      destroy?: Only admin may delete teams
