rename admin/teamlist to admin/teams, remove unnecessary ajax call

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -29,7 +29,6 @@ de:
   settings: Einstellungen
   recrypt_requests: Recrypt Anfragen
   users: Benutzer
-  teamlist: Teamliste
   change_password: Passwort wechseln
   last_login_date_and_from: "Das letzte Login war am %{last_login_at} von %{last_login_from}"
   last_login_date_and_from_country: "Das letzte Login war am %{last_login_at} von %{last_login_from} (%{last_login_country})"
@@ -129,9 +128,9 @@ de:
         destroy: Benutzer löschen
       new:
         title: Neuer Benutzer
-    teamlist:
+    teams:
       index:
-        title: Teamliste
+        title: Teams
     user_roles:
       user: Benutzer
       conf_admin: Conf Admin
