--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,7 +29,6 @@ en:
   settings: Settings
   recrypt_requests: Recrypt requests
   users: Users
-  teamlist: Teamlist
   change_password: Change password
   last_login_date_and_from: "The last login was on %{last_login_at} from %{last_login_from}"
   last_login_date_and_from_country: "The last login was on %{last_login_at} from %{last_login_from} (%{last_login_country})"
@@ -131,9 +130,9 @@ en:
         destroy: Destroy User
       new:
         title: New user
-    teamlist:
+    teams:
       index:
-        title: Teamlist
+        title: Teams
     user_roles:
       user: User
       conf_admin: Conf Admin
